feat: translate entire website to Farsi (RTL) with Vazirmatn font

--- a/package-b.html
+++ b/package-b.html
@@ -1,135 +1,135 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Package B — WordPress + Custom UI</title>
+  <title>پکیج B — وردپرس + رابط سفارشی</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;450;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/tokens.css"><link rel="stylesheet" href="css/base.css"><link rel="stylesheet" href="css/layout.css"><link rel="stylesheet" href="css/components.css"><link rel="stylesheet" href="css/charts.css"><link rel="stylesheet" href="css/animations.css">
 </head>
 <body>
-  <nav class="topbar"><div class="topbar__inner"><a href="index.html" class="topbar__brand">Proposal</a><ul class="topbar__nav" id="topnav"><li><a href="index.html">Overview</a></li><li><a href="packages.html" class="active">Packages</a></li><li><a href="compare.html">Compare</a></li><li><a href="architecture.html">Architecture</a></li><li><a href="timeline.html">Timeline</a></li><li><a href="risks.html">Risks</a></li><li><a href="responsibilities.html">Your Role</a></li><li><a href="next-steps.html">Next Steps</a></li></ul><button class="topbar__mobile-toggle" id="mobile-toggle" aria-label="Toggle navigation"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="3" y1="6" x2="21" y2="6"/><line x1="3" y1="12" x2="21" y2="12"/><line x1="3" y1="18" x2="21" y2="18"/></svg></button></div></nav>
+  <nav class="topbar"><div class="topbar__inner"><a href="index.html" class="topbar__brand">پیشنهاد</a><ul class="topbar__nav" id="topnav"><li><a href="index.html">نمای کلی</a></li><li><a href="packages.html" class="active">پکیج‌ها</a></li><li><a href="compare.html">مقایسه</a></li><li><a href="architecture.html">معماری</a></li><li><a href="timeline.html">زمان‌بندی</a></li><li><a href="risks.html">ریسک‌ها</a></li><li><a href="responsibilities.html">نقش شما</a></li><li><a href="next-steps.html">مراحل بعدی</a></li></ul><button class="topbar__mobile-toggle" id="mobile-toggle" aria-label="تغییر منوی ناوبری"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="3" y1="6" x2="21" y2="6"/><line x1="3" y1="12" x2="21" y2="12"/><line x1="3" y1="18" x2="21" y2="18"/></svg></button></div></nav>
   <div class="progress-bar" id="progress-bar"></div>
   <div class="body-spacer"></div>
 
   <section class="section">
     <div class="container container--narrow">
-      <ul class="breadcrumb"><li><a href="index.html">Proposal</a></li><li class="breadcrumb__sep">/</li><li><a href="packages.html">Packages</a></li><li class="breadcrumb__sep">/</li><li class="breadcrumb__current">Package B</li></ul>
+      <ul class="breadcrumb"><li><a href="index.html">پیشنهاد</a></li><li class="breadcrumb__sep">/</li><li><a href="packages.html">پکیج‌ها</a></li><li class="breadcrumb__sep">/</li><li class="breadcrumb__current">پکیج B</li></ul>
 
       <div data-animate>
-        <span class="badge badge--b">Package B</span>
-        <h1 class="mt-s">WordPress + Custom UI</h1>
+        <span class="badge badge--b">پکیج B</span>
+        <h1 class="mt-s">وردپرس + رابط سفارشی</h1>
         <p class="lead">
-          A custom-designed WordPress site with unique visual identity, multi-level product categories,
-          attribute filtering, and structured specification tables. Your brand, not a template.
+          سایت وردپرسی با طراحی سفارشی، هویت بصری منحصربه‌فرد، دسته‌بندی چندسطحی محصول،
+          فیلتر ویژگی‌ها و جداول مشخصات ساختاریافته. برند شما، نه یک قالب.
         </p>
       </div>
 
       <div class="mt-xl" data-animate>
-        <h3>Who This Is For</h3>
+        <h3>این پکیج برای چه کسی مناسب است</h3>
         <p>
-          A business that wants a distinctive visual identity on WordPress. Has 100–500 products.
-          Wants category-based browsing with filtering. Needs branded design but does not need
-          CRM integration or automation. Has someone on staff who can manage WordPress content regularly.
+          کسب‌وکاری که هویت بصری متمایز روی وردپرس می‌خواهد. ۱۰۰ تا ۵۰۰ محصول دارد.
+          مرور بر اساس دسته‌بندی با فیلتر می‌خواهد. به طراحی برنددار نیاز دارد اما
+          یکپارچه‌سازی CRM یا اتوماسیون لازم ندارد. فردی در تیم هست که محتوای وردپرس را مرتباً مدیریت کند.
         </p>
       </div>
 
       <div class="mt-l" data-animate>
-        <h3>What Is Included</h3>
+        <h3>شامل چه مواردی است</h3>
         <ul class="scope-list scope-list--included">
-          <li>Everything in Package A, plus:</li>
-          <li>Custom-designed WordPress theme (unique to client)</li>
-          <li>Design phase: wireframes, 2 rounds of revision, final mockups</li>
-          <li>Custom product category structure (multi-level, up to 3 levels deep)</li>
-          <li>Product filtering by category, brand, and up to 3 custom attributes</li>
-          <li>Product specification tables (structured per product type)</li>
-          <li>Product inquiry form per product (routes to designated email)</li>
-          <li>Custom header/footer with client branding</li>
-          <li>Up to 10 pages</li>
-          <li>Product entries: up to 200 products</li>
-          <li>Basic performance optimization (image compression, caching plugin)</li>
-          <li>60-day post-launch bug fix window</li>
+          <li>تمام موارد پکیج A، به‌علاوه:</li>
+          <li>قالب طراحی‌شده سفارشی وردپرس (منحصر به مشتری)</li>
+          <li>فاز طراحی: وایرفریم، ۲ دور بازبینی، موکاپ‌های نهایی</li>
+          <li>ساختار دسته‌بندی محصول سفارشی (چندسطحی، تا ۳ سطح عمق)</li>
+          <li>فیلتر محصول بر اساس دسته‌بندی، برند و تا ۳ ویژگی سفارشی</li>
+          <li>جداول مشخصات محصول (ساختاریافته بر اساس نوع محصول)</li>
+          <li>فرم استعلام به ازای هر محصول (ارسال به ایمیل تعیین‌شده)</li>
+          <li>هدر/فوتر سفارشی با برندینگ مشتری</li>
+          <li>تا ۱۰ صفحه</li>
+          <li>ورود محصولات: تا ۲۰۰ محصول</li>
+          <li>بهینه‌سازی پایه عملکرد (فشرده‌سازی تصاویر، افزونه کش)</li>
+          <li>پنجره ۶۰ روزه رفع باگ پس از راه‌اندازی</li>
         </ul>
       </div>
 
       <div class="mt-l" data-animate>
-        <h3>What Is Excluded</h3>
+        <h3>شامل چه مواردی نیست</h3>
         <ul class="scope-list scope-list--excluded">
-          <li>CRM integration</li>
-          <li>Product import automation or bulk management tools</li>
-          <li>Telegram bot</li>
-          <li>E-commerce / payment processing</li>
-          <li>Multi-language support</li>
-          <li>Product comparison interface (side-by-side)</li>
-          <li>API endpoints for external systems</li>
-          <li>Advanced search (full-text, fuzzy matching)</li>
-          <li>Ongoing content updates beyond training</li>
+          <li>یکپارچه‌سازی CRM</li>
+          <li>اتوماسیون ورود محصول یا ابزارهای مدیریت دسته‌جمعی</li>
+          <li>ربات تلگرام</li>
+          <li>فروشگاه الکترونیکی / پردازش پرداخت</li>
+          <li>پشتیبانی چندزبانه</li>
+          <li>رابط مقایسه محصول (کنار هم)</li>
+          <li>نقاط پایانی API برای سیستم‌های خارجی</li>
+          <li>جستجوی پیشرفته (تمام‌متن، تطابق فازی)</li>
+          <li>به‌روزرسانی مستمر محتوا فراتر از آموزش</li>
         </ul>
       </div>
 
       <div class="mt-l" data-animate>
-        <h3>Key Tradeoffs</h3>
+        <h3>مصالحه‌های کلیدی</h3>
         <div class="tradeoff-table">
           <table>
-            <thead><tr><th>What You Gain</th><th>What You Accept</th></tr></thead>
+            <thead><tr><th>آنچه به دست می‌آورید</th><th>آنچه می‌پذیرید</th></tr></thead>
             <tbody>
-              <tr><td class="gain">Unique branded design</td><td class="accept">Longer design/build cycle (5–7 weeks)</td></tr>
-              <tr><td class="gain">Control over visual identity</td><td class="accept">Higher upfront cost than A</td></tr>
-              <tr><td class="gain">Better product browsing (filters, categories)</td><td class="accept">Still manual product management</td></tr>
-              <tr><td class="gain">No theme vendor dependency</td><td class="accept">Custom theme requires developer for structural changes</td></tr>
-              <tr><td class="gain">Stronger brand impression</td><td class="accept">WordPress core/plugin update management remains ongoing</td></tr>
+              <tr><td class="gain">طراحی برنددار منحصربه‌فرد</td><td class="accept">چرخه طراحی/ساخت طولانی‌تر (۵ تا ۷ هفته)</td></tr>
+              <tr><td class="gain">کنترل بر هویت بصری</td><td class="accept">هزینه اولیه بالاتر از A</td></tr>
+              <tr><td class="gain">مرور بهتر محصول (فیلتر، دسته‌بندی)</td><td class="accept">همچنان مدیریت دستی محصول</td></tr>
+              <tr><td class="gain">بدون وابستگی به سازنده قالب</td><td class="accept">قالب سفارشی برای تغییرات ساختاری نیاز به توسعه‌دهنده دارد</td></tr>
+              <tr><td class="gain">تأثیرگذاری قوی‌تر برند</td><td class="accept">مدیریت به‌روزرسانی هسته/افزونه وردپرس همچنان ادامه دارد</td></tr>
             </tbody>
           </table>
         </div>
       </div>
 
       <div class="mt-l" data-animate>
-        <h3>Delivery Phases</h3>
+        <h3>مراحل تحویل</h3>
         <ul class="phase-timeline">
-          <li><span class="phase-name">Discovery &amp; requirements</span><br><span class="phase-duration">3–5 days</span></li>
-          <li><span class="phase-name">Wireframe design</span><br><span class="phase-duration">5–7 days</span></li>
-          <li><span class="phase-name">Visual design + client review</span><br><span class="phase-duration">5–7 days (2 revision rounds)</span></li>
-          <li><span class="phase-name">Theme development</span><br><span class="phase-duration">7–10 days</span></li>
-          <li><span class="phase-name">Content entry &amp; product data</span><br><span class="phase-duration">5–7 days (dependent on data readiness)</span></li>
-          <li><span class="phase-name">QA and revision</span><br><span class="phase-duration">3–5 days</span></li>
-          <li><span class="phase-name">Launch</span><br><span class="phase-duration">1 day</span></li>
+          <li><span class="phase-name">کشف و نیازسنجی</span><br><span class="phase-duration">۳ تا ۵ روز</span></li>
+          <li><span class="phase-name">طراحی وایرفریم</span><br><span class="phase-duration">۵ تا ۷ روز</span></li>
+          <li><span class="phase-name">طراحی بصری + بازبینی مشتری</span><br><span class="phase-duration">۵ تا ۷ روز (۲ دور بازبینی)</span></li>
+          <li><span class="phase-name">توسعه قالب</span><br><span class="phase-duration">۷ تا ۱۰ روز</span></li>
+          <li><span class="phase-name">ورود محتوا و داده محصول</span><br><span class="phase-duration">۵ تا ۷ روز (وابسته به آمادگی داده)</span></li>
+          <li><span class="phase-name">تضمین کیفیت و بازبینی</span><br><span class="phase-duration">۳ تا ۵ روز</span></li>
+          <li><span class="phase-name">راه‌اندازی</span><br><span class="phase-duration">۱ روز</span></li>
         </ul>
         <div class="stat-row mt-m">
-          <div class="stat-item"><div class="stat-item__value">5–7</div><div class="stat-item__label">Weeks total</div></div>
+          <div class="stat-item"><div class="stat-item__value">۵–۷</div><div class="stat-item__label">هفته مجموعاً</div></div>
         </div>
       </div>
 
       <div class="mt-l" data-animate>
-        <h3>Dependencies</h3>
+        <h3>پیش‌نیازها</h3>
         <ul>
-          <li>All Package A dependencies, plus:</li>
-          <li>Brand guidelines (colors, fonts, logo variations)</li>
-          <li>Product images at consistent quality</li>
-          <li>Attribute definitions per product type (what specifications to display)</li>
+          <li>تمام پیش‌نیازهای پکیج A، به‌علاوه:</li>
+          <li>راهنمای برند (رنگ‌ها، فونت‌ها، انواع لوگو)</li>
+          <li>تصاویر محصول با کیفیت یکسان</li>
+          <li>تعریف ویژگی‌ها بر اساس نوع محصول (چه مشخصاتی نمایش داده شود)</li>
         </ul>
       </div>
 
       <div class="mt-l" data-animate>
-        <h3>Maintenance Model</h3>
+        <h3>مدل نگهداری</h3>
         <p>
-          Client self-manages content. Theme structural changes require a developer.
-          Recommended: quarterly maintenance check covering plugin updates, security patches,
-          and backup verification. Priced separately.
+          مشتری محتوا را خودش مدیریت می‌کند. تغییرات ساختاری قالب نیاز به توسعه‌دهنده دارد.
+          توصیه: بررسی نگهداری فصلی شامل به‌روزرسانی افزونه‌ها، وصله‌های امنیتی
+          و تأیید پشتیبان‌گیری. قیمت‌گذاری جداگانه.
         </p>
       </div>
 
       <div class="cta-block mt-xl" data-animate>
-        <h3>Considering Package B?</h3>
-        <p>Compare against all packages, or explore the next option with CRM integration.</p>
-        <a href="compare.html" class="btn btn--primary">Compare packages</a>
-        <a href="package-c.html" class="btn btn--secondary">Next: Package C</a>
+        <h3>پکیج B را در نظر دارید؟</h3>
+        <p>با تمام پکیج‌ها مقایسه کنید یا گزینه بعدی با یکپارچه‌سازی CRM را بررسی کنید.</p>
+        <a href="compare.html" class="btn btn--primary">مقایسه پکیج‌ها</a>
+        <a href="package-c.html" class="btn btn--secondary">بعدی: پکیج C</a>
       </div>
     </div>
   </section>
 
-  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">Proposal prepared February 2026</p><p class="caption" style="margin:0;">Version 1.0</p></div></div></footer>
+  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در بهمن ۱۴۰۴</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
   <script src="js/main.js"></script>
 </body>
 </html>
