--- a/package-a.html
+++ b/package-a.html
@@ -1,147 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Package A — WordPress + Ready Theme</title>
+  <title>پکیج A — وردپرس + قالب آماده</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;450;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/tokens.css">
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/components.css">
-  <link rel="stylesheet" href="css/charts.css">
-  <link rel="stylesheet" href="css/animations.css">
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/tokens.css"><link rel="stylesheet" href="css/base.css"><link rel="stylesheet" href="css/layout.css"><link rel="stylesheet" href="css/components.css"><link rel="stylesheet" href="css/charts.css"><link rel="stylesheet" href="css/animations.css">
 </head>
 <body>
-  <nav class="topbar"><div class="topbar__inner"><a href="index.html" class="topbar__brand">Proposal</a><ul class="topbar__nav" id="topnav"><li><a href="index.html">Overview</a></li><li><a href="packages.html" class="active">Packages</a></li><li><a href="compare.html">Compare</a></li><li><a href="architecture.html">Architecture</a></li><li><a href="timeline.html">Timeline</a></li><li><a href="risks.html">Risks</a></li><li><a href="responsibilities.html">Your Role</a></li><li><a href="next-steps.html">Next Steps</a></li></ul><button class="topbar__mobile-toggle" id="mobile-toggle" aria-label="Toggle navigation"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="3" y1="6" x2="21" y2="6"/><line x1="3" y1="12" x2="21" y2="12"/><line x1="3" y1="18" x2="21" y2="18"/></svg></button></div></nav>
+  <nav class="topbar"><div class="topbar__inner"><a href="index.html" class="topbar__brand">پیشنهاد</a><ul class="topbar__nav" id="topnav"><li><a href="index.html">نمای کلی</a></li><li><a href="packages.html" class="active">پکیج‌ها</a></li><li><a href="compare.html">مقایسه</a></li><li><a href="architecture.html">معماری</a></li><li><a href="timeline.html">زمان‌بندی</a></li><li><a href="risks.html">ریسک‌ها</a></li><li><a href="responsibilities.html">نقش شما</a></li><li><a href="next-steps.html">مراحل بعدی</a></li></ul><button class="topbar__mobile-toggle" id="mobile-toggle" aria-label="تغییر منوی ناوبری"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="3" y1="6" x2="21" y2="6"/><line x1="3" y1="12" x2="21" y2="12"/><line x1="3" y1="18" x2="21" y2="18"/></svg></button></div></nav>
   <div class="progress-bar" id="progress-bar"></div>
   <div class="body-spacer"></div>
 
   <section class="section">
     <div class="container container--narrow">
-      <ul class="breadcrumb"><li><a href="index.html">Proposal</a></li><li class="breadcrumb__sep">/</li><li><a href="packages.html">Packages</a></li><li class="breadcrumb__sep">/</li><li class="breadcrumb__current">Package A</li></ul>
+      <ul class="breadcrumb"><li><a href="index.html">پیشنهاد</a></li><li class="breadcrumb__sep">/</li><li><a href="packages.html">پکیج‌ها</a></li><li class="breadcrumb__sep">/</li><li class="breadcrumb__current">پکیج A</li></ul>
 
       <div data-animate>
-        <span class="badge badge--a">Package A</span>
-        <h1 class="mt-s">WordPress + Ready-Made Theme</h1>
+        <span class="badge badge--a">پکیج A</span>
+        <h1 class="mt-s">وردپرس + قالب آماده</h1>
         <p class="lead">
-          A professional web presence deployed in 2–3 weeks using a pre-built WordPress theme.
-          This is the fastest path to having a live product catalog online.
+          حضور وب حرفه‌ای در ۲ تا ۳ هفته با استفاده از قالب آماده وردپرس.
+          سریع‌ترین مسیر برای داشتن کاتالوگ محصول آنلاین.
         </p>
       </div>
 
-      <!-- Who it's for -->
       <div class="mt-xl" data-animate>
-        <h3>Who This Is For</h3>
+        <h3>این پکیج برای چه کسی مناسب است</h3>
         <p>
-          A business that needs a web presence quickly. Fewer than 100 products. No CRM integration needed.
-          No product management automation. One person manages content occasionally. Budget is the primary constraint.
+          کسب‌وکاری که سریع به حضور وب نیاز دارد. کمتر از ۱۰۰ محصول. بدون نیاز به یکپارچه‌سازی CRM.
+          بدون اتوماسیون مدیریت محصول. یک نفر گاه‌به‌گاه محتوا را مدیریت می‌کند. بودجه محدودیت اصلی است.
         </p>
       </div>
 
-      <!-- Included Scope -->
       <div class="mt-l" data-animate>
-        <h3>What Is Included</h3>
+        <h3>شامل چه مواردی است</h3>
         <ul class="scope-list scope-list--included">
-          <li>WordPress installation and configuration on client-provided hosting</li>
-          <li>Licensed premium theme selected from 2–3 pre-vetted options (client chooses)</li>
-          <li>Homepage, About, Contact, Product Catalog (single-level categories), Inquiry Form</li>
-          <li>Up to 5 static pages</li>
-          <li>Product entries: up to 100 products from client-provided data</li>
-          <li>Basic SEO configuration (meta tags, sitemap, robots.txt)</li>
-          <li>Contact form with email routing</li>
-          <li>Mobile-responsive layout (theme-dependent)</li>
-          <li>SSL certificate installation</li>
-          <li>30-day post-launch bug fix window</li>
+          <li>نصب و پیکربندی وردپرس روی هاست ارائه‌شده توسط مشتری</li>
+          <li>قالب پریمیوم لایسنس‌دار از ۲ تا ۳ گزینه از پیش بررسی‌شده (مشتری انتخاب می‌کند)</li>
+          <li>صفحه اصلی، درباره ما، تماس، کاتالوگ محصول (دسته‌بندی تک‌سطحی)، فرم استعلام</li>
+          <li>تا ۵ صفحه ایستا</li>
+          <li>ورود محصولات: تا ۱۰۰ محصول از داده‌های ارائه‌شده توسط مشتری</li>
+          <li>پیکربندی پایه SEO (متا تگ‌ها، نقشه سایت، robots.txt)</li>
+          <li>فرم تماس با مسیریابی ایمیل</li>
+          <li>طرح‌بندی ریسپانسیو موبایل (وابسته به قالب)</li>
+          <li>نصب گواهینامه SSL</li>
+          <li>پنجره ۳۰ روزه رفع باگ پس از راه‌اندازی</li>
         </ul>
       </div>
 
-      <!-- Excluded Scope -->
       <div class="mt-l" data-animate>
-        <h3>What Is Excluded</h3>
+        <h3>شامل چه مواردی نیست</h3>
         <ul class="scope-list scope-list--excluded">
-          <li>Custom design or layout modifications beyond theme options</li>
-          <li>CRM integration</li>
-          <li>Product import automation</li>
-          <li>Multi-language support</li>
-          <li>E-commerce / payment processing</li>
-          <li>Advanced filtering or product comparison features</li>
-          <li>Telegram bot or any automation</li>
-          <li>Ongoing content updates (training provided instead)</li>
-          <li>Performance optimization beyond theme defaults</li>
-          <li>Custom product specification tables</li>
+          <li>طراحی سفارشی یا تغییرات چیدمان فراتر از گزینه‌های قالب</li>
+          <li>یکپارچه‌سازی CRM</li>
+          <li>اتوماسیون ورود محصول</li>
+          <li>پشتیبانی چندزبانه</li>
+          <li>فروشگاه الکترونیکی / پردازش پرداخت</li>
+          <li>فیلتر پیشرفته یا ویژگی‌های مقایسه محصول</li>
+          <li>ربات تلگرام یا هرگونه اتوماسیون</li>
+          <li>به‌روزرسانی مستمر محتوا (به‌جای آن آموزش ارائه می‌شود)</li>
+          <li>بهینه‌سازی عملکرد فراتر از پیش‌فرض‌های قالب</li>
+          <li>جداول مشخصات سفارشی محصول</li>
         </ul>
       </div>
 
-      <!-- Tradeoffs -->
       <div class="mt-l" data-animate>
-        <h3>Key Tradeoffs</h3>
+        <h3>مصالحه‌های کلیدی</h3>
         <div class="tradeoff-table">
           <table>
-            <thead><tr><th>What You Gain</th><th>What You Accept</th></tr></thead>
+            <thead><tr><th>آنچه به دست می‌آورید</th><th>آنچه می‌پذیرید</th></tr></thead>
             <tbody>
-              <tr><td class="gain">Speed: live in 1–2 weeks</td><td class="accept">Limited visual differentiation from other sites using same theme</td></tr>
-              <tr><td class="gain">Low upfront cost</td><td class="accept">Theme update dependency; theme vendor controls future features</td></tr>
-              <tr><td class="gain">Familiar WordPress admin</td><td class="accept">Manual product entry and updates</td></tr>
-              <tr><td class="gain">Large plugin ecosystem</td><td class="accept">Plugin conflicts and maintenance overhead</td></tr>
-              <tr><td class="gain">No developer dependency for basic edits</td><td class="accept">Design ceiling defined by theme capabilities</td></tr>
+              <tr><td class="gain">سرعت: آنلاین در ۱ تا ۲ هفته</td><td class="accept">تمایز بصری محدود از سایر سایت‌های با همان قالب</td></tr>
+              <tr><td class="gain">هزینه اولیه پایین</td><td class="accept">وابستگی به به‌روزرسانی قالب؛ سازنده قالب آینده ویژگی‌ها را کنترل می‌کند</td></tr>
+              <tr><td class="gain">پنل مدیریت آشنای وردپرس</td><td class="accept">ورود و به‌روزرسانی دستی محصولات</td></tr>
+              <tr><td class="gain">اکوسیستم بزرگ افزونه‌ها</td><td class="accept">تداخل افزونه‌ها و سربار نگهداری</td></tr>
+              <tr><td class="gain">بدون وابستگی به توسعه‌دهنده برای ویرایش‌های ساده</td><td class="accept">سقف طراحی تعیین‌شده توسط قابلیت‌های قالب</td></tr>
             </tbody>
           </table>
         </div>
       </div>
 
-      <!-- Delivery Phases -->
       <div class="mt-l" data-animate>
-        <h3>Delivery Phases</h3>
+        <h3>مراحل تحویل</h3>
         <ul class="phase-timeline">
-          <li><span class="phase-name">Discovery &amp; theme selection</span><br><span class="phase-duration">2–3 days</span></li>
-          <li><span class="phase-name">Installation and configuration</span><br><span class="phase-duration">2–3 days</span></li>
-          <li><span class="phase-name">Content entry</span><br><span class="phase-duration">3–5 days (dependent on client data readiness)</span></li>
-          <li><span class="phase-name">Review and revision</span><br><span class="phase-duration">2–3 days</span></li>
-          <li><span class="phase-name">Launch</span><br><span class="phase-duration">1 day</span></li>
+          <li><span class="phase-name">کشف و انتخاب قالب</span><br><span class="phase-duration">۲ تا ۳ روز</span></li>
+          <li><span class="phase-name">نصب و پیکربندی</span><br><span class="phase-duration">۲ تا ۳ روز</span></li>
+          <li><span class="phase-name">ورود محتوا</span><br><span class="phase-duration">۳ تا ۵ روز (وابسته به آمادگی داده‌های مشتری)</span></li>
+          <li><span class="phase-name">بازبینی و اصلاح</span><br><span class="phase-duration">۲ تا ۳ روز</span></li>
+          <li><span class="phase-name">راه‌اندازی</span><br><span class="phase-duration">۱ روز</span></li>
         </ul>
         <div class="stat-row mt-m">
           <div class="stat-item">
-            <div class="stat-item__value">2–3</div>
-            <div class="stat-item__label">Weeks total</div>
+            <div class="stat-item__value">۲–۳</div>
+            <div class="stat-item__label">هفته مجموعاً</div>
           </div>
         </div>
       </div>
 
-      <!-- Dependencies -->
       <div class="mt-l" data-animate>
-        <h3>Dependencies</h3>
-        <p>Client must provide the following before or during the project:</p>
+        <h3>پیش‌نیازها</h3>
+        <p>مشتری باید موارد زیر را قبل یا حین پروژه ارائه دهد:</p>
         <ul>
-          <li>Hosting credentials and domain access</li>
-          <li>Product data: name, description, image, category, and price for each product</li>
-          <li>Brand logo and guidelines (if any)</li>
+          <li>اطلاعات دسترسی هاست و دامنه</li>
+          <li>داده محصول: نام، توضیحات، تصویر، دسته‌بندی و قیمت هر محصول</li>
+          <li>لوگو و راهنمای برند (در صورت وجود)</li>
         </ul>
       </div>
 
-      <!-- Maintenance -->
       <div class="mt-l" data-animate>
-        <h3>Maintenance Model</h3>
+        <h3>مدل نگهداری</h3>
         <p>
-          Client self-manages via WordPress admin. Theme and plugin updates are the client's
-          responsibility. Optional: a monthly maintenance retainer covering updates, backups,
-          and minor fixes can be arranged separately.
+          مشتری از طریق پنل مدیریت وردپرس خودش مدیریت می‌کند. به‌روزرسانی قالب و افزونه‌ها بر عهده
+          مشتری است. اختیاری: قرارداد نگهداری ماهانه شامل به‌روزرسانی‌ها، پشتیبان‌گیری
+          و رفع اشکالات جزئی به‌صورت جداگانه قابل ترتیب است.
         </p>
       </div>
 
-      <!-- CTA -->
       <div class="cta-block mt-xl" data-animate>
-        <h3>Is Package A right for you?</h3>
-        <p>Compare all five packages or see the full comparison table.</p>
-        <a href="compare.html" class="btn btn--primary">Compare packages</a>
-        <a href="package-b.html" class="btn btn--secondary">Next: Package B</a>
+        <h3>آیا پکیج A مناسب شماست؟</h3>
+        <p>تمام پنج پکیج را مقایسه کنید یا جدول مقایسه کامل را ببینید.</p>
+        <a href="compare.html" class="btn btn--primary">مقایسه پکیج‌ها</a>
+        <a href="package-b.html" class="btn btn--secondary">بعدی: پکیج B</a>
       </div>
     </div>
   </section>
 
-  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">Proposal prepared February 2026</p><p class="caption" style="margin:0;">Version 1.0</p></div></div></footer>
+  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در بهمن ۱۴۰۴</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
   <script src="js/main.js"></script>
 </body>
 </html>
